tests/fail/generic_union_forbidden.stderr
error[E0470]: Bare union is deprecated and removed in Toka. Use Tagged Enum or explicit type structure with 'core/mem::bit_cast' instead.
 --> tests/fail/generic_union_forbidden.tk:3:5
   |
 3 |     as val: T |
   |     ^
